Fixed the alignment of the class .todo-container, which was un aligned. Now it is centered

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -64,7 +64,7 @@ color: white;
 
 .todo-container{
 display: flex;
-
+justify-content: center;
 }
 
 #item-list{
